# xmbshell

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE.RetroArch  README.md  cmake-variants.yaml  xmbshell.desktop
.sway/: config-record
.woodpecker/: build-image.yml  build-wayland-scanner.sh  build.Dockerfile  build.yml  download_unlicensed.sh  setup-cross-compile.sh  snap.yaml  test-image.yml  test.Dockerfile  test.yml  windows.yml
.woodpecker/apprun-hooks/: gsettings.sh
.woodpecker/snap/: fix-ffmpeg.yaml  generate.py  install-snap.sh
.woodpecker/snap/docker/: Dockerfile.arm64
cmake/: AddShader.cmake  kits.json  windows-clang-19.cmake  windows.cmake
icons/: .gitignore  icon_button_kenney_license.txt  ouya buttons.pdn
include/: config.hpp  constants.hpp  dbus.hpp  input.hpp  module.hpp  utils.hpp
include/app/: xmbshell.hpp
include/app/components/: main_menu.hpp  news_display.hpp
include/menu/: applications_menu.hpp  menu.hpp  settings_menu.hpp  users_menu.hpp  utils.hpp
include/render/: debug.hpp  font_renderer.hpp  gui_renderer.hpp  image_renderer.hpp  model.hpp  obj_loader.hpp  phase.hpp  resource_loader.hpp  texture.hpp  utils.hpp  window.hpp
include/render/app/: render_shell.hpp
include/render/components/: font_renderer.hpp  image_renderer.hpp  simple_renderer.hpp  wave_renderer.hpp
include/support/: freetype.hpp  sdl.hpp
modules/: giomm.cppm
opt/: obj_loader.cpp
po/: de.po  en.po  pl.po
schemas/: re.jcm.xmbos.xmbshell.gschema.xml
scripts/appimage/: in_container.sh  podman.sh
shaders/: blur.comp  blur.frag  blur.vert  image.frag  image.vert  text.frag  text.geom  wave.frag  wave.vert  wayland_surface.frag  wayland_surface.vert  yuv420p_decode.comp
snap/: snapcraft.yaml
src/: config.cpp  config.cppm  constants.cppm  dbus.cpp  dbus.cppm  input.cppm  main.cpp  menu.cppm  programs.cppm  render.cppm  utils.cpp  utils.cppm
src/app/: component.cpp  component.cppm  module.cppm  xmbshell.cpp  xmbshell.cppm
src/app/components/: choice_overlay.cpp  choice_overlay.cppm  main_menu.cpp  main_menu.cppm  message_overlay.cpp  message_overlay.cppm  news_display.cpp  news_display.cppm  progress_overlay.cpp  progress_overlay.cppm
src/app/layers/: blur_layer.cpp  blur_layer.cppm
src/app/wayland/: wayland_server.cppm
src/menu/: applications_menu.cpp  applications_menu.cppm  base.cppm  files_menu.cpp  files_menu.cppm  settings_menu.cpp  settings_menu.cppm  users_menu.cpp  users_menu.cppm  utils.cppm
src/programs/: base_viewer.cppm  image_viewer.cppm  text_viewer.cppm  video_player.cppm
src/render/: dynamic.cpp  font_renderer.cpp  gui_renderer.cpp  image_renderer.cpp  model.cpp  module.cppm  phase.cpp  resource_loader.cpp  shaders.cpp  shaders.cppm  texture.cpp  utils.cpp  window.cpp
src/render/app/: render_shell.cpp
src/render/components/: font_renderer.cpp  image_renderer.cpp  wave_renderer.cpp  wave_renderer.cppm
test/: headless.sh  record_video.sh  setup_recording.sh  wayland_server.cpp
